--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
    --footer-grey: #343631;    
    --header-BG: #110E0E; 
 }
-
+body{
+    width:100%;
+    overflow-x: hidden;
+}
 * {
 
     margin:0;
@@ -23,7 +26,7 @@
     justify-content: center;
     position:fixed;
     bottom: 15rem;
-    right: 8rem;
+    right: 4rem;
     background: var(--main-Background);
     border:0;
     z-index:999; 
@@ -816,10 +819,12 @@ header {
     height: 100%;
     width:100%;
     display:flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap:50rem;
+    /* gap:50rem; */
     padding-top:6rem;
+    padding-left:10.31rem;
+    padding-right:15rem;
 }
 
 .footer__container__left{
@@ -864,7 +869,7 @@ header {
 
 .footer__container__right{
     display:flex;
-    gap:20rem;
+    gap:8rem;
     text-align: center;
 }
 
